# moist-bot

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260506_0001_create_command_usage.py
scripts/: logs  moist-bot.service
src/moist_bot/: __main__.py  bot.py  bot_fleabot.py  config.py  constants.py  settings.py
src/moist_bot/cogs/: avatar.py  blocklist.py  cdt.py  cmds.py  errorhandle.py  honeypot.py  jsk.py  lqpfp.py  meow.py  meta.py  misc.py  mp3.py  owner.py  owner_debug.py  owner_only.py  petpet.py  pp.py  purge.py  snake.py  stats.py  ukraine.py
src/moist_bot/db/: __init__.py  engine.py  models.py  pool.py
src/moist_bot/logs/: .gitkeep
src/moist_bot/migrations/: env.py
src/moist_bot/migrations/versions/: 20260506_0001_create_command_usage.py  20260509_0002_add_command_usage_stats.py  20260516_0003_add_blocklist.py  20260518_0004_rename_blocklist_tables.py  20260521_0005_add_policy_permissions.py  20260522_0006_add_honeypot.py  20260523_0007_rename_honeypot_softban_fields.py  20260524_0008_allow_honeypot_config_delete.py  20260526_0009_add_honeypot_alert_message_id.py  20260526_0010_add_honeypot_stats.py  20260527_0011_add_restart_notices.py  20260527_0012_add_socket_event_stats.py  20260528_0013_add_honeypot_punishment_action.py  20260529_0014_dedupe_honeypot_incidents.py
src/moist_bot/models/: __init__.py  blocklist.py  command_usage.py  honeypot.py  runtime.py  socket_event_stats.py
src/moist_bot/services/: __init__.py  blocklist.py  honeypot.py
src/moist_bot/utils/: checks.py  context.py  converters.py  default.py  formats.py  gif_converter.py  logger.py  message_purge.py  paginator.py  process.py  setup_logging.py  time.py
typings/fastbloom_rs/: __init__.pyi
